fix: Path parameters in openapi.json
